fix: more readable color on input for sidebar filters

--- a/v2/components/input/input.scss
+++ b/v2/components/input/input.scss
@@ -11,7 +11,7 @@
         padding: 7px 10px;
         background-color: $argo-color-gray-3;
         border: 1px solid $argo-color-gray-5;
-        color: $argo-color-gray-7;
+        color: $white-color;
         min-width: 0;
         font-size: 14px;
         line-height: 1.5em;
